# ribbon

./: CMakeLists.txt  tests.cmake
boot/: bootstrap.sps  start.sps
c-proto/: c-proto.c  c-proto.h  nccc-dummy.c  prims.inc.h  reader.inc.h  ssplit.inc.h
cxx-proto/: cxx-proto.cpp
